2011-12-06  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-sum.el (gnus-summary-make-tool-bar): Fix typo.

2011-12-05  Paul Eggert  <eggert@cs.ucla.edu>

	* netrc.el (netrc-credentials): Spelling fix.

2011-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-fun.el (gnus-fun-ppm-change-string):
	* gnus-msg.el (gnus-inews-do-gcc):
	* gnus-sum.el (gnus-summary-find-for-reselect):
	* gnus.el (gnus-summary-cancelled):
	* message.el (message-cancel-hook, message-send-news)
	* nndiary.el (nndiary-headers, nndiary-parse-schedule-value):
	* nnir.el (nnir-run-hyrex):
	* nntp.el (nntp-with-open-group-function):
	* pgg.el (pgg-pending-timers): Spelling fix.

2011-12-04  Chong Yidong  <cyd@gnu.org>

	* message.el (message-pop-to-buffer): Partially revert 2011-11-30
	change (Bug#10200).

2011-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface):
	* gnus-art.el (gnus-article-x-face-command): Update the header format
	of icon data for the most recent icontopbm program.

2011-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-do-gcc):
	* message.el (message-send-mail):
	* mml.el (mml-generate-mime): Share the value of the buffer-local
	`message-options' variable between a draft buffer and temprary working
	buffers.

2011-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-pop-to-buffer): Revert 2011-09-11 change.

2011-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Convert link file names
	for Cygwin.

2011-11-27  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-group.el (gnus-group-prepare-flat):
	* mm-bodies.el (mm-encode-body):
	* mml.el (mml-preview):
	* nnml.el (nnml-request-compact-group):
	* pop3.el (pop3-stream-type): Spelling fix.

2011-11-26  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-start.el (gnus-newsrc-to-gnus-format): Spelling fix.

2011-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	* color.el (color-rgb-to-hsl):
	* gmm-utils.el (gmm-tool-bar-style):