@@ -1,3 +1,8 @@
+2011-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-pop-to-buffer): Use pop-to-buffer instead of
+	pop-to-buffer-same-window for old Emacsen.
+
 2011-12-06  Juanma Barranquero  <lekktu@gmail.com>
 
 	* gnus-sum.el (gnus-summary-make-tool-bar): Fix typo.
